--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,5 +1,14 @@
 version: '3.1'
 services:
+  graphql_backend:
+    build:
+      context: ../
+      dockerfile: docker/Dockerfile
+    ports:
+      - 8080:8080
+    container_name: graphql_backend
+    depends_on:
+      - "db"
   db:
     image: mariadb
     container_name: db
