changed to spring data jpa repositories; optimized dockerfile

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,11 +1,12 @@
-# Dieses Dockerfile ist nicht direkt nutzbar wegen dem copy befehl
+# You cannot use this dockerfile directly without the compose file because of the copy command
 FROM maven:3.6.2-jdk-11-openj9 as builder
 WORKDIR /app
-# Der Copybefehl kann hier so geschrieben werden da der Build context (im docker-compose file) auf das Stammverzeichnis zeigt.
+# You can write this copy command here because the build context in the compose file is set to the base directory 
+COPY ./pom.xml ./pom.xml
+RUN mvn -e -B dependency:go-offline
 COPY ./ ./
-RUN mvn -e -B dependency:resolve
 RUN mvn -e package
 
 FROM openjdk:8-alpine
 COPY --from=builder /app/target/graphql-0.0.1-SNAPSHOT.jar /
-CMD ["java","-jar","/graphql-0.0.1-SNAPSHOT.jar"]
+CMD sleep 8;java -jar /graphql-0.0.1-SNAPSHOT.jar
