--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,16 @@
-#spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+#do not do ddl automatic (no creation of tables or something)
+spring.jpa.hibernate.ddl-auto:none
+# maybe modify this connection string to your local dev db server
+spring.datasource.url=jdbc:mysql://localhost:3306/testdb
+spring.datasource.username=root
+spring.datasource.password=password
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
-# Direct log messages to stdout
-log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-log4j.appender.stdout.Target=System.out
-log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}:%L - %m%n
+# this naming strategy is necessary because of the table names with capital letter
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
-# Root logger option
-log4j.rootLogger=INFO, file, stdout
-
-# Log everything. Good for troubleshooting
-log4j.logger.org.hibernate=DEBUG
-
-log4j.logger.org.hibernate.SQL=DEBUG
-log4j.logger.org.hibernate.type=TRACE
-log4j.logger.org.hibernate.type.descriptor.sql=trace
+# debugging / logging options for development
+#logging.level.root=DEBUG
+#spring.jpa.show-sql: true
+#spring.jpa.properties.hibernate.format_sql=true
+#logging.level.org.hibernate.type.descriptor.sql=trace
